only apply pseudoclass for fixed header spacing if browser uses position:fixed and not position:sticky

--- a/crt_portal/static/sass/custom/intake.scss
+++ b/crt_portal/static/sass/custom/intake.scss
@@ -59,7 +59,8 @@
 
 // Fix for IE and Edge, which rely on .intake-header--progress-bar being position: fixed (applied via progress-bar.js).
 // This prevents the progress bar from covering up the card header when a target is clicked on.
-.crt-portal-card--proform h2::before {
+// Class is inserted into markup automatically if necessary in progress-bar.js.
+.crt-portal-card--space-for-header h2::before {
   display: block;
   content: '';
   height: 150px;
